@@ -3,6 +3,7 @@ LIST OF CHANGES
  - a partial reimplementation of the serialization framework for components
    and compositions in order to speed-up frequently used methods 
  - add geno files to disabled access list in http_sfweb.conf
+ - cookie decryption - use an up-to-date Crypt::CBC API and algorithm
 
 release 91.10.0
  - script npg_samplesheet4MiSeq is removed this utility has been moved
